<resources>
    <string name="app_name">Bookie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="BackButton">backBtn</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="create_an_account_to_bookie_to_get_all_features">Create an account to Bookie to get all features</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create">Create</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">login here</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="login_in_your_existant_account_of_bookie">Login in your existant account of Bookie</string>
    <string name="email_phone">email / phone</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="title">Title</string>
    <string name="description">description</string>
    <string name="addbtn">addBtn</string>
    <string name="add">add</string>
    <string name="add_note">Add Note</string>
    <string name="details">Details</string>
    <string name="export_to_pdf">Export to Pdf</string>
</resources>