<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/screenBackgroundColor"
        android:padding="30dp">

        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/BackButton"
            android:src="@drawable/ic_back"
            android:tint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/let_s_get_started"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_btn" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/create_an_account_to_bookie_to_get_all_features"
            android:textColor="@color/lightGrey"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            android:inputType="textPersonName"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/email"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@+id/et_username"
            app:layout_constraintStart_toStartOf="@+id/et_username"
            app:layout_constraintTop_toBottomOf="@+id/et_username"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_phone"
            android:layout_marginTop="20dp"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/black"
            android:padding="15dp"
            app:layout_constraintEnd_toEndOf="@+id/et_email"
            app:layout_constraintStart_toStartOf="@+id/et_email"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            android:autofillHints="phone" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/password"
            android:padding="15dp"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="@+id/et_phone"
            app:layout_constraintStart_toStartOf="@+id/et_phone"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_btn"
            android:backgroundTint="@color/colorPrimaryDark"
            android:elevation="3dp"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/btn_sign_up"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up" />

        <Button
            android:id="@+id/login_fragment_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/login_here"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:layout_marginStart="@dimen/dimen_10dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>