<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:elevation="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/cd_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_note"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/cd_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />

            <ImageView
                android:id="@+id/cdImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:src="@drawable/note"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cd_heading" />


            <EditText
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/title"
                android:maxLines="1"
                android:maxLength="100"
                android:padding="10dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cdImageView" />

            <EditText
                android:id="@+id/dialogDes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/description"
                android:padding="10dp"
                android:maxLines="2"
                android:maxLength="1000"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/dialogTitle"
                app:layout_constraintStart_toStartOf="@+id/dialogTitle"
                app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

            <Button
                android:id="@+id/cd_addBtn"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/bg_btn"
                android:text="@string/add"
                android:layout_marginTop="30dp"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/dialogDes"
                app:layout_constraintStart_toStartOf="@+id/dialogDes"
                app:layout_constraintTop_toBottomOf="@+id/dialogDes" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>